--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.16"
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/multer": "^1.4.12",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.17",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9"
   }
 }
