--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,21 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "module": "commonjs",                                   
-    "esModuleInterop": true,                                        
-    "forceConsistentCasingInFileNames": true,            
-    "strict": true,                                   
-    "skipLibCheck": true                         
-  }
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./types"
+    ]
+  },
+  "include": [
+    "index.ts",
+    "Controllers/**/*.ts",
+    "Middlewares/**/*.ts",
+    "Models/**/*.ts",
+    "types/**/*.d.ts"
+  ]
 }
