--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node index.ts",
-    "start": "node index.js"
+    "start": "node index.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
